Fixed Overladding On Avatar and Upload Photo Btn on Mobile View

--- a/public/custom/css/styles.css
+++ b/public/custom/css/styles.css
@@ -94,6 +94,10 @@ body {
     .maintenance img {
         width: 300px;
     }
+
+    .sm-margin-right-20 {
+        margin-right: 20px !important;
+    }
 }
 
 .text-shadow {
